seleccion de color reactivo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Color 🥉 </title>
+<!-- hojas de estilo -->
+<link rel="stylesheet" href="./css/normalize.css">
+<link rel="stylesheet" href="./css/style.css">
+<!-- favicon -->
+<link rel="shortcut icon" href="./assets/brainjs.ico" type="image/x-icon">
 </head>
 <body>
   <h2>Paleta de Colores </h2>
   <div class="salida" id="salida"></div>
-  <input type="color" id="color"></>
+  <div id="color-div">
+    <input type="color" id="color" value= "#fff"/>
+  </div>
+
+  <script src="./js/app.js"></script>
 </body>
 </html>
